load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bonanza_browser_proto",
    srcs = ["bonanza_browser.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http:http_proto",
    ],
)

go_proto_library(
    name = "bonanza_browser_go_proto",
    importpath = "github.com/buildbarn/bonanza/pkg/proto/configuration/bonanza_browser",
    proto = ":bonanza_browser_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http",
    ],
)

go_library(
    name = "bonanza_browser",
    embed = [":bonanza_browser_go_proto"],
    importpath = "github.com/buildbarn/bonanza/pkg/proto/configuration/bonanza_browser",
    visibility = ["//visibility:public"],
)
