load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bonanza_fetcher_proto",
    srcs = ["bonanza_fetcher.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/model/parser:bonanza_configuration_model_parser_proto",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem:filesystem_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http:http_proto",
    ],
)

go_proto_library(
    name = "bonanza_fetcher_go_proto",
    importpath = "bonanza.build/pkg/proto/configuration/bonanza_fetcher",
    proto = ":bonanza_fetcher_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/model/parser",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http",
    ],
)

go_library(
    name = "bonanza_fetcher",
    embed = [":bonanza_fetcher_go_proto"],
    importpath = "bonanza.build/pkg/proto/configuration/bonanza_fetcher",
    visibility = ["//visibility:public"],
)
