load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "analysis_proto",
    srcs = ["analysis.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/build:build_proto",
        "//pkg/proto/model/command:command_proto",
        "//pkg/proto/model/core:core_proto",
        "//pkg/proto/model/encoding:encoding_proto",
        "//pkg/proto/model/fetch:fetch_proto",
        "//pkg/proto/model/filesystem:filesystem_proto",
        "//pkg/proto/model/starlark:starlark_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "analysis_go_proto",
    importpath = "bonanza.build/pkg/proto/model/analysis",
    proto = ":analysis_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/build",
        "//pkg/proto/model/command",
        "//pkg/proto/model/core",
        "//pkg/proto/model/encoding",
        "//pkg/proto/model/fetch",
        "//pkg/proto/model/filesystem",
        "//pkg/proto/model/starlark",
    ],
)

go_library(
    name = "analysis",
    embed = [":analysis_go_proto"],
    importpath = "bonanza.build/pkg/proto/model/analysis",
    visibility = ["//visibility:public"],
)
