load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "core_proto",
    srcs = ["core.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:any_proto",
        "@protobuf//:descriptor_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "core_go_proto",
    importpath = "bonanza.build/pkg/proto/model/core",
    proto = ":core_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "core",
    embed = [":core_go_proto"],
    importpath = "bonanza.build/pkg/proto/model/core",
    visibility = ["//visibility:public"],
)
