load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "evaluation_proto",
    srcs = ["evaluation.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/model/core:core_proto"],
)

go_proto_library(
    name = "evaluation_go_proto",
    importpath = "github.com/buildbarn/bonanza/pkg/proto/model/evaluation",
    proto = ":evaluation_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/model/core"],
)

go_library(
    name = "evaluation",
    embed = [":evaluation_go_proto"],
    importpath = "github.com/buildbarn/bonanza/pkg/proto/model/evaluation",
    visibility = ["//visibility:public"],
)
