load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "executewithstorage_proto",
    srcs = ["executewithstorage.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/core:core_proto",
        "//pkg/proto/model/encoding:encoding_proto",
        "//pkg/proto/storage/object:object_proto",
    ],
)

go_proto_library(
    name = "executewithstorage_go_proto",
    importpath = "bonanza.build/pkg/proto/model/executewithstorage",
    proto = ":executewithstorage_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/core",
        "//pkg/proto/model/encoding",
        "//pkg/proto/storage/object",
    ],
)

go_library(
    name = "executewithstorage",
    embed = [":executewithstorage_go_proto"],
    importpath = "bonanza.build/pkg/proto/model/executewithstorage",
    visibility = ["//visibility:public"],
)
