config_setting(
    name = "collect_code_coverage_enabled",
    values = {"collect_code_coverage": "true"},
)

alias(
    name = "coverage_output_generator",
    actual = select({
        ":collect_code_coverage_enabled": "//command_line_option:coverage_output_generator",
        "//conditions:default": None,
    }),
    visibility = ["//visibility:public"],
)
